Adds a breadcrumb component and a chat view

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     <script src="assets/plugins/chart.js/dist/Chart.min.js"></script>
     <script src="assets/plugins/jquery-count-to/jquery.countTo.js"></script>
     <script src="assets/plugins/slimscroll/jquery.slimscroll.min.js"></script>
+    <script src="assets/plugins/moment/min/moment.min.js"></script>
+    <script src="assets/plugins/fullcalendar/dist/fullcalendar.js"></script>
     <script src="assets/js/app.js"></script>
 
 	<style type="text/css">
